# seeed_armbian_extension

./: .gitignore  README.md  seeed_armbian_extension.sh
.github/workflows/: build-and-publish.yml  kernel-build-publish.yml
armbian-ota/: ota-support.sh
camera_engine_rkaiq/: CMakeLists.txt  build-deb.sh
camera_engine_rkaiq/.github/workflows/: build-and-publish.yml
camera_engine_rkaiq/debian/: changelog.in  rules.in
camera_engine_rkaiq/rkaiq/: CMakeLists.txt
camera_engine_rkaiq/rkaiq/cmake/: CompileOptions.cmake  Findlibdrm.cmake
camera_engine_rkaiq/rkaiq/iqfiles/isp39/: imx219_rpi-camera-v2_default.json  imx708_rpi-camera-v3_default.json
camera_engine_rkaiq/rkaiq_3A_server/: CMakeLists.txt  rkaiq_3A_server.cpp
firstlogin-protection/: armbian-common-atomic-write.patch  armbian-firstlogin-hardening.patch  armbian-firstrun-atomic-mac.patch  armbian-firstrun-atomic-write.patch  bootscript-armbianenv-corruption-detection.patch  firstlogin-protection.sh  ssh-protect
morse-fgh100m-dkms/: Makefile  dkms.conf
morse-fgh100m-dkms/debian/: changelog  control  copyright  docs  postinst  prerm  rules
morse-fgh100m-dkms/src/: Makefile  debug.h  firmware.c  mac.c  of.c  pageset.c  spi.c
patches/kernel/: 001-recomputer-rk35xx-adc-keys-threshold.patch  002-recomputer-rk35xx-fan-speed.patch  003-recomputer-r8125-led-policy-dt.patch  003-recomputer-r8125-led-policy.patch  003-recomputer-rk3576-gpu-opp-supported-hw.patch  004-dw-dp-aux-recovery-on-usb-c-dp-alt-mode.patch  004-recomputer-rk3576-panfrost-job-timeout.patch  005-recomputer-rk3576-dp-4k-overlay-vpll-clock-parent.patch  006-rk3576-dsi-switch-dclk-src-to-cpll.patch  007-dw-mipi-dsi2-set-panel-orientation-early.patch
prebuilt/: camera-engine-rkaiq-rk3576_1.0-1_arm64.deb  camera-engine-rkaiq-rk3588_1.0-1_arm64.deb
rk-uboot-postprocess/: rk-uboot-postprocess.sh
rk3588_gmali/: build-deb.sh
rk35xx_usb_gadget/: build-usbdevice-deb.sh
scripts/: build.sh  generate-deb-index.sh  publish-aptly.sh
security-hardening/: recomputer-security.sh
(+3 files in other folders)
