cmake_minimum_required(VERSION 2.8...3.22)

project(camera_engine)

# Derive ARCH from CMAKE_SYSTEM_PROCESSOR if not set externally
if (NOT ARCH)
    if (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
        set(ARCH "aarch64")
    elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
        set(ARCH "arm")
    else()
        set(ARCH "${CMAKE_SYSTEM_PROCESSOR}")
    endif()
endif()

set(RK_AIQ_IS_SUBDIR TRUE)

# Pre-derive ISP_HW_VERSION from RKAIQ_TARGET_SOC so all subdirectories see it
if (RKAIQ_TARGET_SOC AND NOT ISP_HW_VERSION)
    string(TOUPPER "${RKAIQ_TARGET_SOC}" _SOC_UPPER)
    # Map SoC to ISP version number (matches rkaiq/cmake/BuildOptions.cmake)
    if (_SOC_UPPER STREQUAL "RV1103B")
        set(ISP_HW_VERSION "-DISP_HW_V33")
    elseif (_SOC_UPPER STREQUAL "RK3576")
        set(ISP_HW_VERSION "-DISP_HW_V39")
    elseif (_SOC_UPPER STREQUAL "RK3562")
        set(ISP_HW_VERSION "-DISP_HW_V32_LITE")
    elseif (_SOC_UPPER STREQUAL "RV1106")
        set(ISP_HW_VERSION "-DISP_HW_V32")
    elseif (_SOC_UPPER STREQUAL "RK3588")
        set(ISP_HW_VERSION "-DISP_HW_V30")
    elseif (_SOC_UPPER STREQUAL "RK356X")
        set(ISP_HW_VERSION "-DISP_HW_V21")
    elseif (_SOC_UPPER STREQUAL "RV1109")
        set(ISP_HW_VERSION "-DISP_HW_V20")
    endif()
endif()

if(EXISTS ${PROJECT_SOURCE_DIR}/rk_aiq)
    add_subdirectory(rk_aiq)
    set(AIQ_DIR ${PROJECT_SOURCE_DIR}/rk_aiq)
    message(WARNING "use rk_aiq dir:${PROJECT_SOURCE_DIR}/rk_aiq")
else()
    add_subdirectory(rkaiq)
    set(AIQ_DIR ${PROJECT_SOURCE_DIR}/rkaiq)
    message(WARNING "use rkaiq dir:${PROJECT_SOURCE_DIR}/rkaiq")
endif()
add_subdirectory(rkisp_demo)
add_subdirectory(IspFec)
add_subdirectory(smart_ir)
add_subdirectory(media_enquiry)
add_subdirectory(rk_stream)
add_subdirectory(rkaiq_tool_server)
#add_subdirectory(rkisp_parser_demo)
if(EXISTS ${PROJECT_SOURCE_DIR}/rkaiq_3A_server)
    add_subdirectory(rkaiq_3A_server)
endif()
